--- a/web/package.json
+++ b/web/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@fontsource/inter": "^5.0.16",
+    "@lit/context": "^1.1.0",
     "@shoelace-style/shoelace": "^2.12.0",
     "@vaadin/router": "^1.7.5",
     "dayjs": "^1.11.10",
