--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -19,7 +19,10 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    "plugins": [{
+      "name": "ts-lit-plugin"
+    }]
   },
   "include": ["src"]
 }
