--- a/web/package.json
+++ b/web/package.json
@@ -32,6 +32,7 @@
     "eslint-plugin-prettier": "^5.1.0",
     "prettier": "^3.1.1",
     "sass": "^1.69.5",
+    "ts-lit-plugin": "^2.0.2",
     "typescript": "^5.2.2",
     "vite": "^5.0.8"
   },
