--- a/web/package.json
+++ b/web/package.json
@@ -18,7 +18,7 @@
     "heroicons": "^2.1.1",
     "ky": "^1.1.3",
     "lit": "^3.1.0",
-    "zod": "^3.22.4"
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@types/node": "^20.10.5",
