--- a/web/nginx/default.conf.template
+++ b/web/nginx/default.conf.template
@@ -9,7 +9,7 @@ server {
    proxy_set_header X-Real-IP $remote_addr;
    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
    proxy_set_header X-NginX-Proxy true;
-   proxy_pass http://tvapp-be:3000/api;
+   proxy_pass ${DOCKER_BE_URL};
    proxy_ssl_session_reuse off;
    proxy_set_header Host $http_host;
    proxy_cache_bypass $http_upgrade;
