Refactored api backend and added tasks

--- a/api/.gitignore
+++ b/api/.gitignore
@@ -1,5 +1,4 @@
-mishosapi
 .env
-tvproviders/episodesSample.json
-tvproviders/sample.json
-tvproviders/seasonSample.json
+mishosapi
+delete-data.sql
+builddocker.sh
