Updated the api env.sample

--- a/api/env.sample
+++ b/api/env.sample
@@ -1,3 +1,5 @@
+TZ=America/Chicago
 PORT=3000
-DB_URL=
-SECRET=
+DB_URL=username:password@tcp(db_ipaddress:3306)/mishosgo?charset=utf8mb4&parseTime=True&loc=Local
+SECRET=YOUR_SECRET_KEY
+WATCHLIST_RECENT_LIMIT=10
