--- a/docker-compose-example.yml
+++ b/docker-compose-example.yml
@@ -23,6 +23,8 @@ services:
       #- DB_URL=/home/username/mishos/mishos.db
       - SECRET=YOUR_SECRET_KEY_HERE
       - WATCHLIST_RECENT_LIMIT=30
+      - CORS=http://192.168.0.101
+      - TOKEN_DURATION=90
       # - CRON_PROVIDER_UPDATE=21 8 * * *
       # - RUN_MIGRATION=1
     restart: unless-stopped
