--- a/web/package.json
+++ b/web/package.json
@@ -8,7 +8,7 @@
     "dev-host": "vite --host",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "lint": "tsc --noEmit && eslint \"src/**/*.{ts,js}\""
+    "lint": "tsc --noEmit && biome check ./src"
   },
   "dependencies": {
     "@fontsource/inter": "^5.0.16",
@@ -22,17 +22,8 @@
     "yup": "^1.3.3"
   },
   "devDependencies": {
+    "@biomejs/biome": "1.8.2",
     "@types/node": "^20.10.5",
-    "@typescript-eslint/eslint-plugin": "^6.15.0",
-    "@typescript-eslint/parser": "^6.15.0",
-    "eslint": "^8.56.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-import-resolver-typescript": "^3.6.1",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-lit": "^1.11.0",
-    "eslint-plugin-prettier": "^5.1.0",
-    "prettier": "^3.1.1",
-    "sass": "^1.69.5",
     "ts-lit-plugin": "^2.0.2",
     "typescript": "^5.2.2",
     "vite": "^5.0.8"
