--- a/web/package.json
+++ b/web/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "clean": "rm -rf dist tmp",
     "dev": "vite",
     "dev-host": "vite --host",
     "build": "tsc && vite build",
