Added show completion percentage to show details

--- a/api/.golangci.yml
+++ b/api/.golangci.yml
@@ -39,7 +39,7 @@ linters:
     - goconst
     - gocyclo
     - goimports
-    - mnd
+    #- mnd - no magic numbers
     - gosec
     - misspell
     - nakedret
